fix button size on small devices

--- a/docs/style/app.css
+++ b/docs/style/app.css
@@ -79,7 +79,6 @@ a:hover {
 }
 
 .btn, button, input[type=text], input[type=number] {
-  min-width: 4rem;
   text-align: center;
   display: inline-block;
   background-color: var(--c0);
